project/phase2/test/test_2_r12.spl
int test_2_r12()
{
  int a[3];
  float b[4];
  a[0] = a[a[2]];
  b[0] = b[a[1]];
  a[0] = a[b[0]];
  return 0;
}